# llmBasedSim

./: .env.example  .gitignore  CONTRIBUTING.md  InitFileGuide.md  README.md  llm_readme.md  pyproject.toml  requirements.txt
config/: init_test.yaml  player.yaml  simulation.yaml  world.yaml
config/characters/: alice.yaml  bob.yaml
docs/: game-flow-interfaces.md
prompts/: attribute_update_system.j2  attribute_update_user.j2  character_system.j2  character_user.j2  init_system.j2  narrative_system.j2  narrative_user.j2  physics_system.j2  physics_user.j2  player_action_resolve_system.j2  player_action_resolve_user.j2  player_intent_system.j2  player_intent_user.j2  sensory_system.j2  sensory_user.j2
public_start/: murder.yaml  test_empty.yaml  whisperheads.yaml
src/: main.py
src/agents/: __init__.py  init.py
src/config/: loader.py
src/game/: __init__.py  attributes.py  condition_eval.py  deterministic_rules.py  rules.py  state_apply.py  tick_eval.py
src/graph/: __init__.py  game_graph.py  game_state.py
src/llm/: __init__.py  parser.py
src/models/: __init__.py  character.py  common.py  config.py  events.py  player.py  world.py
src/prompts/: loader.py
src/ui/: __init__.py  cli.py  renderer.py  status.py
src/web/: app.py  main.py
tests/: test_attributes.py  test_condition_eval.py  test_config_loader.py  test_init_and_state.py  test_init_extra.py  test_models.py  test_parser.py  test_phase4.py  test_prompts.py  test_renderer.py  test_rules.py  test_state_apply.py  test_tick_eval.py  test_tick_speed.py  test_webui.py
web/: index.html
(+2 files in other folders)
